<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_login_activity"
    style="@style/MatchParent"
    android:layout_marginLeft="@dimen/login_padding_left_right"
    android:layout_marginRight="@dimen/login_padding_left_right"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/login_method_view"
        style="@style/MatchWidth"
        android:paddingTop="@dimen/login_padding_actionbar"
        android:text="@string/login_new_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_first_name"
            style="@style/WrapContent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:hint="@string/first_name"
            android:layout_margin="5dp"
            android:maxLength="10"
            android:paddingTop="@dimen/login_padding_top"
            android:singleLine="true"
            android:textSize="16sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/user_last_name"
            style="@style/WrapContent"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:hint="@string/last_name"
            android:layout_margin="5dp"
            android:maxLength="10"
            android:paddingTop="@dimen/login_padding_top"
            android:singleLine="true"
            android:textSize="16sp"
            android:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:background="@color/color_accent"
        style="@style/MatchWidth"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:layout_height="40dp"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/check_link_privacy"
        android:text="@string/text_privacy_link"
        android:textSize="14sp"
        android:textColor="@color/color_blue_qb"
        android:layout_marginTop="20dp"
        style="@style/MatchWidth" />

</LinearLayout>