<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                app:srcCompat="@mipmap/ic_launcher"
                app:civ_border_width="0.5dp"
                app:civ_border_color="@color/text_color_light_grey" />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileEditImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/edit_profile" />

            <TextView
                android:id="@+id/nameAbbr"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="XX"
                android:textSize="50sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:singleLine="true" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textSize="16sp"
                android:text="@string/first_name"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textColor="@color/dark_gray"/>
            <EditText
                android:id="@+id/edittext_user_first_name"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/first_name"
                android:maxLength="10"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textSize="16sp"
                android:text="@string/last_name"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/dark_gray"/>
            <EditText
                android:id="@+id/edittext_user_last_name"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:gravity="center"
                android:maxLength="10"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:background="@color/color_accent"
        style="@style/MatchWidth"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:text="@string/dialog_OK"
        android:layout_alignParentBottom="true" />
</RelativeLayout>